--- a/website/templates/components/map_editor.pug
+++ b/website/templates/components/map_editor.pug
@@ -44,6 +44,16 @@ form#pdm-editor-form
 							div.form-check.form-check-inline
 								input.form-check-input(type="radio" name=field.tag value="" id=`pdm-editor_${field.tag}_unknown` checked required=(!field.optional || false))
 								label.form-check-label(for=`pdm-editor_${field.tag}_unknown`)= __("Ne sais pas")
+					else if field.type === "icons"
+						div.container
+							div.row.mx-n4.mb-n2.align-items-center
+								each icon, id in field.values
+									div.px-2.mb-2.col-4
+										div.custom-control.custom-checkbox.image-checkbox
+											input.custom-control-input(type="checkbox" value=JSON.stringify(icon.tags) id=`pdm-editor_${field.tag}_${id}`)
+											label.custom-control-label(for=`pdm-editor_${field.tag}_${id}` title=icon.label)
+												img.img-fluid(src=`/images/form/${icon.icon}.png`)
+												p= icon.label
 
 					if field.description
 						small.form-text.text-muted= field.description
@@ -110,6 +120,29 @@ script.
 	window.addEventListener("osm_login", showEditingMode);
 	window.addEventListener("osm_logout", showEditingMode);
 
+	// Check if an OSM feature tags matches pattern PdM tags
+	function checkFeatureMatchesPatternTags(osmTags, pdmKey, pdmPattern) {
+		if(typeof pdmPattern !== "object") {
+			return false;
+		}
+
+		return pdmPattern.valid.filter(valid => {
+			// Special values
+			if(valid.startsWith("<")) {
+				if(valid === "<POS_INT>") {
+					return !isNaN(parseInt(osmTags[pdmKey])) && parseInt(osmTags[pdmKey]) > 0;
+				}
+				else {
+					return false;
+				}
+			}
+			// Classic string
+			else {
+				return osmTags[pdmKey] === valid;
+			}
+		}).length > 0;
+	}
+
 	// Load form with existing tags
 	function loadForm() {
 		editorFormDom.reset();
@@ -123,15 +156,23 @@ script.
 			});
 
 			// Auto-select appropriate entry in select with multiple tags
-			if(editors.pdm && editors.pdm.fields && editors.pdm.fields.find(fld => fld.type === "select" && fld.tag.startsWith("_"))) {
-				editors.pdm.fields.filter(fld => fld.type === "select" && fld.tag.startsWith("_"))
+			if(editors.pdm && editors.pdm.fields && editors.pdm.fields.find(fld => ["select", "icons"].includes(fld.type) && fld.tag.startsWith("_"))) {
+				editors.pdm.fields.filter(fld => ["select", "icons"].includes(fld.type) && fld.tag.startsWith("_"))
 				.forEach(field => {
 					// Read each response for this field
-					for(let v of field.values) {
+					for(let i = 0; i < field.values.length; i++) {
+						let v = field.values[i];
+
 						// Check if all tags in this response match feature
 						let hasAllTags = true;
 						for(let k in v.tags) {
-							if(currentEditorData.tags[k] !== v.tags[k] && (v.tags[k] !== "" || currentEditorData.tags[k] !== undefined)) {
+							// This tag has several input allowed values
+							if(typeof v.tags[k] === "object" && !checkFeatureMatchesPatternTags(currentEditorData.tags, k, v.tags[k])) {
+								hasAllTags = false;
+								break;
+							}
+							// This tag has a single classic allowed value
+							else if(typeof v.tags[k] === "string" && currentEditorData.tags[k] !== v.tags[k] && (v.tags[k] !== "" || currentEditorData.tags[k] !== undefined)) {
 								hasAllTags = false;
 								break;
 							}
@@ -139,8 +180,13 @@ script.
 
 						// If matching, make this response as field value
 						if(hasAllTags) {
-							editorFormDom.elements[field.tag].value = JSON.stringify(v.tags);
-							break;
+							if(field.type === "select") {
+								editorFormDom.elements[field.tag].value = JSON.stringify(v.tags);
+								break;
+							}
+							else if(field.type === "icons") {
+								editorFormDom.elements[`pdm-editor_${field.tag}_${i}`].checked = true;
+							}
 						}
 					}
 				});
@@ -262,7 +308,9 @@ script.
 		e.preventDefault();
 		showMarker();
 		const formData = Object.fromEntries([...new FormData(e.target)].filter(kv => kv[0] && !kv[0].startsWith("_") && kv[1] && kv[1].toString().trim() !== ""));
+
 		let emptyTags = Object.fromEntries([...new FormData(e.target)].filter(kv => kv[0] && kv[0].toString().trim() !== "" && !kv[0].startsWith("_") && !kv[1] || kv[1].trim() === ""));
+
 		const fixedTags = Object.fromEntries(
 			editors.pdm.fields
 			.filter(f => f.type === "hidden")
@@ -271,23 +319,56 @@ script.
 			.map(e => e[1] === "*" && currentEditorData.tags && currentEditorData.tags[e[0]] ? [e[0], currentEditorData.tags[e[0]]] : e)
 			.filter(e => e[1] !== "*")
 		);
+
 		let multiselectTags = {};
+		let tagsToEventuallyUpdate = {};
 		[...new FormData(e.target)].filter(kv => kv[0] && kv[0].startsWith("_") && kv[1] && kv[1].toString().trim() !== "").forEach(e => {
 			Object.entries(JSON.parse(e[1])).forEach(mste => {
 				if(mste[0] && mste[0].toString().trim() !== "" && (!mste[1] || mste[1].trim() === "")) {
-					emptyTags[mste[0]] = mste[1]
+					emptyTags[mste[0]] = "";
 				}
 				else {
-					multiselectTags[mste[0]] = mste[1]
+					if(typeof mste[1] === "string") {
+						multiselectTags[mste[0]] = mste[1];
+					}
+					else if(typeof mste[1] === "object") {
+						tagsToEventuallyUpdate = mste[1];
+					}
 				}
 			});
 		});
+
+		// Values from checkbox, which aren't handled by FormData object
+		for(let input of e.target.elements) {
+			if(input.type == "checkbox") {
+				Object.entries(JSON.parse(input.value)).forEach(cbt => {
+					if(input.checked) {
+						if(typeof cbt[1] === "string") {
+							multiselectTags[cbt[0]] = cbt[1];
+						}
+						else if(typeof cbt[1] === "object") {
+							tagsToEventuallyUpdate[cbt[0]] = cbt[1];
+						}
+					}
+					else {
+						emptyTags[cbt[0]] = "";
+					}
+				});
+			}
+		}
 
 		const tagsToApply = Object.assign(
 			{},
 			fixedTags, formData, multiselectTags,
 			currentEditorData.usedZoom < 16 ? { fixme: "Position approximative" } : {}
 		);
+
+		// Add default values for tags to eventually update if new feature is created
+		if(currentEditorData && currentEditorData.mode === "add") {
+			Object.entries(tagsToEventuallyUpdate).forEach(tteu => {
+				tagsToApply[tteu[0]] = tteu[1].user_defined;
+			});
+		}
 
 		// Remove from tagsToApply the emptyTags
 		Object.keys(emptyTags).forEach(k => delete tagsToApply[k]);
@@ -367,6 +448,14 @@ script.
 
 							// Set new tags
 							element = osmApi.setTags(element, tagsToApply);
+
+							// Update if necessary tags to eventually update
+							Object.entries(tagsToEventuallyUpdate).forEach(tteu => {
+								const osmExistingValue = currentEditorData.tags[tteu[0]];
+								if(!checkFeatureMatchesPatternTags(currentEditorData.tags, tteu[0], tteu[1])) {
+									element = osmApi.setTag(element, tteu[0], tteu[1].user_defined);
+								}
+							});
 
 							// Send to OSM
 							return osmApi.sendElement(element, changesetId)
