--- a/website/templates/components/map.pug
+++ b/website/templates/components/map.pug
@@ -23,7 +23,7 @@ script.
 	const listOfSources = !{JSON.stringify(pdmSources)};
 
 	// Map init
-	const map = new mapboxgl.Map({
+	const map = new maplibregl.Map({
 		container: 'map',
 		pitchWithRotate: false,
 		dragRotate: false,
@@ -32,7 +32,7 @@ script.
 		style: !{JSON.stringify(mapstyle)}
 	});
 
-	map.addControl(new mapboxgl.NavigationControl({ showCompass: false }));
+	map.addControl(new maplibregl.NavigationControl({ showCompass: false }));
 	map.loadImage('/images/exclamation.png', (error, image) => {
 		if (error) { console.error(error); }
 		else { map.addImage('pdm-exclamation', image); }
@@ -76,7 +76,7 @@ script.
 	}
 
 	// Geolocate
-	const geoloc = new mapboxgl.GeolocateControl({ trackUserLocation: true, positionOptions: { enableHighAccuracy: true } });
+	const geoloc = new maplibregl.GeolocateControl({ trackUserLocation: true, positionOptions: { enableHighAccuracy: true } });
 	map.addControl(geoloc);
 	if(!hashParams.has("map")) {
 		map.on("load", () => geoloc.trigger());
@@ -154,7 +154,7 @@ script.
 			featureMarker.setLngLat(coords);
 		}
 		else if(coords) {
-			featureMarker = new mapboxgl.Marker({ color: "red" }).setLngLat(coords).addTo(map);
+			featureMarker = new maplibregl.Marker({ color: "red" }).setLngLat(coords).addTo(map);
 		}
 	}
 
