--- a/website/templates/components/stats.pug
+++ b/website/templates/components/stats.pug
@@ -229,8 +229,8 @@ script.
 								type: 'time',
 								bounds: 'ticks',
 								time: {
-									tooltipFormat: "DD/MM",
-									displayFormats: { day: "DD/MM" },
+									tooltipFormat: "DD/MM/YY",
+									displayFormats: { day: "DD/MM/YY" },
 									round: "day",
 									unit: "day"
 								}
@@ -258,8 +258,8 @@ script.
 							type: 'time',
 							bounds: 'ticks',
 							time: {
-								tooltipFormat: "DD/MM",
-								displayFormats: { day: "DD/MM" },
+								tooltipFormat: "DD/MM/YY",
+								displayFormats: { day: "DD/MM/YY" },
 								round: "day",
 								unit: "day"
 							}
