Major rework for world scale, support of ways geometries, split features tables

--- a/website/templates/components/edit_button.pug
+++ b/website/templates/components/edit_button.pug
@@ -81,7 +81,7 @@ script.
 					dropdown.appendChild(editWithPdm);
 
 					if(options.page === "issues") {
-						editWithPdm.href = `/projects/#{id}/map#map=18/${lat}/${lng}&load=osm~${options.noteid}`;
+						editWithPdm.href = `/projects/#{name}/map#map=18/${lat}/${lng}&load=osm~${options.noteid}`;
 						editWithPdm.target = "_blank";
 						button.href = editWithPdm.href;
 						button.target = "_blank";
