--- a/website/templates/components/issues_sidebar.pug
+++ b/website/templates/components/issues_sidebar.pug
@@ -11,7 +11,7 @@ div.pdm-sidebar#pdm-issues-sidebar.pdm-hidden.pdm-sidebar
 				img(style="max-width: 100%; height: 40px" src="/images/logo_mini.png" alt=__("Projet du mois"))
 
 			div.btn-group.w-100.mb-2.mt-2(role="group")
-				a.btn.btn-outline-secondary.w-50(href=`/projects/${id}/map` role="button")
+				a.btn.btn-outline-secondary.w-50(href=`/projects/${name}/map` role="button")
 					i.fa.fa-map.mr-1
 					| #{__("Carte")}
 				button.btn.btn-secondary.w-50(type="button" disabled="")
