--- a/website/templates/components/map_sidebar_legend.pug
+++ b/website/templates/components/map_sidebar_legend.pug
@@ -7,7 +7,7 @@ div.btn-group.w-100.mb-2.mt-2(role="group")
 	button.btn.btn-secondary.w-50(type="button" disabled="")
 		i.fa.fa-map.mr-1
 		| #{__("Carte")}
-	a.btn.btn-outline-secondary.w-50(href=`/projects/${id}/issues` role="button")
+	a.btn.btn-outline-secondary.w-50(href=`/projects/${name}/issues` role="button")
 		i.fa.fa-list.mr-1
 		| #{__("Liste")}
 
