Avoid map pitch on touch devices (see #339)

--- a/website/templates/components/map.pug
+++ b/website/templates/components/map.pug
@@ -27,6 +27,8 @@ script.
 		container: 'map',
 		pitchWithRotate: false,
 		dragRotate: false,
+		touchPitch: false,
+		touchZoomRotate: false,
 		hash: "map",
 		bounds: [-5.010, 41.212, 10.019, 51.234],
 		style: !{JSON.stringify(mapstyle)}
