--- a/website/templates/common/body_header.pug
+++ b/website/templates/common/body_header.pug
@@ -3,5 +3,6 @@ div.container-fluid.d-none.d-md-block
 		div.row.flex-nowrap.justify-content-between.align-items-center
 			div.col-12.text-center
 				a.blog-header-logo.text-dark(href="/")
-					img.blog-header-logo(src="/images/logo.png" title=__("Projet du mois OpenStreetMap"))
-				p.m-0.mt-2.text-muted(style="line-height: 1.4rem")= __("Catalyseur d'énergies pour OpenStreetMap v%s", CONFIG.package_version)
+					img.blog-header-logo(src="/images/logo.png" alt="")
+					h1= CONFIG.WEBSITE_NAME
+				p.m-0.mt-2.text-muted(style="line-height: 1.4rem")= CONFIG.WEBSITE_MOTTO+" v"+CONFIG.package_version
